[package]
name = "postulacion-fintual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
config = "0.13.0"
lazy_static = "1.4.0"
reqwest = "0.11.10"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = {version="1.9.0", features=["rt-multi-thread", "macros"] }
